--- a/interface/index.html
+++ b/interface/index.html
@@ -8,11 +8,21 @@
 
 </head>
 <body>
+  <form id="login-form">
+  <h2>Login</h2>
+  <input type="text" id="login-username" placeholder="Nome de usuário" required />
+  <input type="password" id="login-password" placeholder="Senha" required />
+  <button type="submit">Entrar</button>
+</form>
+
+<div id="login-message" style="color: red; display: none;"></div>
+
   <div class="container">
     <h1>Cadastro de Usuários</h1>
     <form id="user-form" onsubmit="return false;">
       <input type="text" id="name" placeholder="Nome" required />
       <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Senha" required />
       <button type="submit">Cadastrar</button>
     </form>
     
